namespace/llm/mindsdb/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mindsdb
  namespace: llm
spec:
  selector:
    app: mindsdb
  ports:
    - port: 47334
      targetPort: 47334
      protocol: TCP
  type: ClusterIP
