namespace/llm/mindsdb/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mindsdb-https-route
  namespace: llm
spec:
  parentRefs:
    - name: envoy-gateway
      namespace: envoy-gateway-system
      sectionName: https
  hostnames:
    - "mindsdb.oglesby.io"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: mindsdb
          port: 47334
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mindsdb-http-route
  namespace: llm
spec:
  parentRefs:
    - name: envoy-gateway
      namespace: envoy-gateway-system
      sectionName: http
  hostnames:
    - "mindsdb.oglesby.io"
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
